--- a/css/wacce.css
+++ b/css/wacce.css
@@ -8,6 +8,16 @@
     width: 80px;
     height: auto;
 }
+.button {
+    background-color:green;
+    border: none;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+}
 
 .pull-right {
     float: left!important;
@@ -57,6 +67,7 @@
 
 .flags a {
     display: block;
+   
 }
 
 #HEADINGS {
@@ -67,3 +78,8 @@
     padding: 13px;
     margin: 0px;
 }
+.flag img{
+    width:75px;
+    height:50px;
+}
+
